--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,46 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- Header -->
+    <LinearLayout
+        android:id="@+id/header_layout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/light_cardBackground"
+        >
+
+        <!-- Ícone do botão -->
+        <ImageView
+            android:id="@+id/button_icon"
+            android:layout_width="8dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="20dp"
+            android:src="@drawable/light_icon_menu"
+            android:clickable="true"
+            android:focusable="true"
+
+            android:layout_marginVertical="15dp"/>
+
+        <!-- Título -->
+        <TextView
+            android:id="@+id/title_text"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/tela_inicial"
+            android:textSize="24sp"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+
+            android:layout_marginVertical="15dp"
+            />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
