--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.GlobalGrade" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Light Theme -->
+    <style name="Theme.GlobalGrade.Light" parent="Theme.Material3.DayNight.NoActionBar">
+
     </style>
 
-    <style name="Theme.GlobalGrade" parent="Base.Theme.GlobalGrade" />
+    <!-- Dark Theme -->
+    <style name="Theme.GlobalGrade.Dark" parent="Base.Theme.GlobalGrade">
+    </style>
 </resources>
