--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,6 @@
     </style>
 
     <!-- Dark Theme -->
-    <style name="Theme.GlobalGrade.Dark" parent="Base.Theme.GlobalGrade">
+    <style name="Theme.GlobalGrade.Dark" parent="Theme.Material3.DayNight.NoActionBar">
     </style>
 </resources>
