Add the str_modules & font & start the Header & Pinner element

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Light Theme -->
     <style name="Theme.GlobalGrade.Light" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="theme_backgroundColor"> @color/light_backgroundColor </item>
+        <item name="theme_text"> @color/light_text </item>
+        <item name="theme_cardBackground"> @color/light_cardBackground </item>
+        <item name="theme_input"> @color/light_input </item>
 
+        <item name="theme_icon_menu"> @drawable/light_icon_menu </item>
     </style>
 
     <!-- Dark Theme -->
     <style name="Theme.GlobalGrade.Dark" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="theme_backgroundColor"> @color/dark_backgroundColor </item>
+        <item name="theme_text"> @color/dark_text </item>
+        <item name="theme_cardBackground"> @color/dark_cardBackground </item>
+        <item name="theme_input"> @color/dark_input </item>
+
+        <item name="theme_icon_menu"> @drawable/dark_icon_menu </item>
     </style>
 </resources>
