--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+
+    android:background="?attr/theme_backgroundColor"
+    >
 
     <!-- Header -->
     <LinearLayout
@@ -19,34 +22,67 @@
         android:background="@color/light_cardBackground"
         >
 
-        <!-- Ícone do botão -->
-        <ImageView
-            android:id="@+id/button_icon"
-            android:layout_width="8dp"
-            android:layout_height="33dp"
-            android:layout_marginStart="20dp"
-            android:src="@drawable/light_icon_menu"
-            android:clickable="true"
-            android:focusable="true"
-
-            android:layout_marginVertical="15dp"/>
-
-        <!-- Título -->
+        <!-- Title -->
         <TextView
             android:id="@+id/title_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
+
             android:layout_weight="1"
-            android:text="@string/tela_inicial"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
+
+            android:layout_gravity="center"
             android:gravity="center"
 
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-
-            android:layout_marginVertical="15dp"
+            android:text="@string/str_home"
+            android:textColor="?attr/theme_backgroundColor"
+            android:textSize="24sp"
+            android:fontFamily="@font/bai_jamjuree"
             />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:layout_gravity="center_vertical"
+
+            android:src="?attr/theme_icon_menu"
+            android:background="@android:color/transparent"
+            />
+    </LinearLayout>
+
+    <!-- Pinner & Title -->
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/header_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
+
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/str_course"
+            android:textSize="24sp"
+            android:textColor="?attr/theme_text"
+            android:fontFamily="@font/bai_jamjuree"
+             />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            />
+
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
