--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -10,79 +10,105 @@
     android:background="?attr/theme_backgroundColor"
     >
 
-    <!-- Header -->
-    <LinearLayout
-        android:id="@+id/header_layout"
-        android:layout_width="0dp"
+    <!-- DrawerLayout -->
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/light_cardBackground"
+        android:background="?attr/theme_cardBackground"
         >
-
-        <!-- Title -->
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-
-            android:layout_weight="1"
-
-            android:layout_gravity="center"
-            android:gravity="center"
-
-            android:text="@string/str_home"
-            android:textColor="?attr/theme_backgroundColor"
-            android:textSize="24sp"
-            android:fontFamily="@font/bai_jamjuree"
-            />
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:layout_gravity="center_vertical"
 
-            android:src="?attr/theme_icon_menu"
-            android:background="@android:color/transparent"
-            />
-    </LinearLayout>
-
-    <!-- Pinner & Title -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/header_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"
-
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
+            android:src="?attr/theme_icon_exit"
+            android:contentDescription="@string/str_exit_btn" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="@string/str_course"
-            android:textSize="24sp"
-            android:textColor="?attr/theme_text"
+            android:text="@string/str_exit_btn"
+            android:textColor="?attr/theme_backgroundColor"
+            android:textSize="32sp"
             android:fontFamily="@font/bai_jamjuree"
-             />
-
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginTop="12dp"
-            android:gravity="center"
             />
 
+    </com.google.android.material.navigation.NavigationView>
 
-    </LinearLayout>
+    <!-- Main Screen -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Header -->
+        <LinearLayout
+            android:id="@+id/header_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/light_cardBackground" >
+
+            <!-- Title -->
+            <TextView
+                android:id="@+id/title_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+
+                android:layout_weight="1"
+
+                android:layout_gravity="center"
+                android:gravity="center"
+
+                android:text="@string/str_home"
+                android:textColor="?attr/theme_backgroundColor"
+                android:textSize="24sp"
+                android:fontFamily="@font/bai_jamjuree" />
+
+            <ImageButton android:id="@+id/menu_toggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_gravity="center_vertical"
+
+                android:src="?attr/theme_icon_menu"
+                android:contentDescription="@string/str_home"
+                android:background="@android:color/transparent" />
+        </LinearLayout>
+
+        <!-- Pinner & Title -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/header_layout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="30dp"
+
+            android:orientation="vertical"
+            android:gravity="center_horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="@string/str_course"
+                android:textSize="24sp"
+                android:textColor="?attr/theme_text"
+                android:fontFamily="@font/bai_jamjuree" />
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="12dp"
+                android:gravity="center"
+                />
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
