--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,39 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
 
-    android:background="?attr/theme_backgroundColor"
-    >
-
-    <!-- DrawerLayout -->
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/theme_cardBackground"
-        >
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:src="?attr/theme_icon_exit"
-            android:contentDescription="@string/str_exit_btn" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="@string/str_exit_btn"
-            android:textColor="?attr/theme_backgroundColor"
-            android:textSize="32sp"
-            android:fontFamily="@font/bai_jamjuree"
-            />
-
-    </com.google.android.material.navigation.NavigationView>
-
-    <!-- Main Screen -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    android:background="?attr/theme_backgroundColor" >
 
         <!-- Header -->
         <LinearLayout
@@ -81,7 +49,7 @@
         </LinearLayout>
 
         <!-- Pinner & Title -->
-        <LinearLayout
+        <LinearLayout android:id="@+id/pinner_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/header_layout"
@@ -101,14 +69,33 @@
                 android:textColor="?attr/theme_text"
                 android:fontFamily="@font/bai_jamjuree" />
 
-            <Spinner
+            <Spinner android:id="@+id/course_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
                 android:layout_marginTop="12dp"
                 android:gravity="center"
-                />
+
+                android:entries="@array/course_options"
+                android:paddingBottom="4dp" />
         </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.drawerlayout.widget.DrawerLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintTop_toBottomOf="@id/pinner_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="30dp"
+
+        app:cardCornerRadius="12dp"
+
+        android:backgroundTint="?attr/theme_cardBackground" >
+
+        <include layout="@layout/layout_card_clean" />
+
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
