--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,97 +5,138 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-
     android:background="?attr/theme_backgroundColor" >
 
-        <!-- Header -->
-        <LinearLayout
-            android:id="@+id/header_layout"
+    <!-- Header -->
+    <LinearLayout
+        android:id="@+id/header_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/light_cardBackground" >
+
+        <!-- Title -->
+        <TextView
+            android:id="@+id/title_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/light_cardBackground" >
+            android:textAlignment="center"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/str_home"
+            android:textColor="?attr/theme_backgroundColor"
+            android:textSize="24sp"
+            android:fontFamily="@font/bai_jamjuree" />
 
-            <!-- Title -->
-            <TextView
-                android:id="@+id/title_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-
-                android:layout_weight="1"
-
-                android:layout_gravity="center"
-                android:gravity="center"
-
-                android:text="@string/str_home"
-                android:textColor="?attr/theme_backgroundColor"
-                android:textSize="24sp"
-                android:fontFamily="@font/bai_jamjuree" />
-
-            <ImageButton android:id="@+id/menu_toggle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:layout_gravity="center_vertical"
-
-                android:src="?attr/theme_icon_menu"
-                android:contentDescription="@string/str_home"
-                android:background="@android:color/transparent" />
-        </LinearLayout>
-
-        <!-- Pinner & Title -->
-        <LinearLayout android:id="@+id/pinner_layout"
+        <ImageButton android:id="@+id/menu_toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/header_layout"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="30dp"
+            android:padding="8dp"
+            android:layout_gravity="center_vertical"
+            android:src="?attr/theme_icon_menu"
+            android:contentDescription="@string/str_home"
+            android:background="@android:color/transparent" />
+    </LinearLayout>
 
-            android:orientation="vertical"
-            android:gravity="center_horizontal" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="@string/str_course"
-                android:textSize="24sp"
-                android:textColor="?attr/theme_text"
-                android:fontFamily="@font/bai_jamjuree" />
-
-            <Spinner android:id="@+id/course_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-
-                android:entries="@array/course_options"
-                android:paddingBottom="4dp" />
-        </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+    <!-- Pinner & Title -->
+    <LinearLayout android:id="@+id/pinner_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/header_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp"
 
+        android:orientation="vertical"
+        android:gravity="center_horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/str_course"
+            android:textSize="24sp"
+            android:textColor="?attr/theme_text"
+            android:fontFamily="@font/bai_jamjuree" />
+
+        <Spinner android:id="@+id/course_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:gravity="center"
+            android:background="@color/dark_text"
+            android:entries="@array/course_options"
+
+            android:paddingBottom="4dp" />
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/pinner_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
+        >
 
-        app:cardCornerRadius="12dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        android:backgroundTint="?attr/theme_cardBackground" >
+            <!-- First CardView -->
+            <androidx.cardview.widget.CardView android:id="@+id/card_one"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="?attr/theme_cardBackground">
 
-        <include layout="@layout/layout_card_clean" />
+                <include layout="@layout/layout_card_clean" />
 
-    </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>
+
+            <!-- Second CardView -->
+            <androidx.cardview.widget.CardView android:id="@+id/card_two"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="?attr/theme_cardBackground">
+
+                <include layout="@layout/layout_card_clean" />
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Third CardView -->
+            <androidx.cardview.widget.CardView android:id="@+id/card_three"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                android:layout_marginBottom="16dp"
+                android:backgroundTint="?attr/theme_cardBackground">
+
+                <include layout="@layout/layout_card_clean" />
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Fourth CardView -->
+            <androidx.cardview.widget.CardView android:id="@+id/card_four"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="12dp"
+                android:backgroundTint="?attr/theme_cardBackground">
+
+                <include layout="@layout/layout_card_clean" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
