Create the RecycleView default & Make the adjustments to work as the last commit.

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,7 +5,7 @@
 
     <attr name="theme_backgroundColor" format="color" />
     <attr name="theme_text" format="color" />
-    <attr name="theme_cardBackground" format="color" />
+    <attr name="theme_cardBackground" format="reference" />
     <attr name="theme_input" format="color" />
 
     <!-- Icons -->
