--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/theme_backgroundColor" >
+    android:background="?attr/theme_backgroundColor">
 
     <!-- Header -->
     <LinearLayout
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/light_cardBackground" >
+        android:background="@color/light_cardBackground">
 
         <!-- Title -->
         <TextView
@@ -32,7 +32,8 @@
             android:textSize="24sp"
             android:fontFamily="@font/bai_jamjuree" />
 
-        <ImageButton android:id="@+id/menu_toggle"
+        <ImageButton
+            android:id="@+id/menu_toggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
@@ -50,7 +51,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="30dp"
-
         android:orientation="vertical"
         android:gravity="center_horizontal" >
 
@@ -67,76 +67,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:gravity="center"
-            android:background="@color/dark_text"
             android:entries="@array/course_options"
-
             android:paddingBottom="4dp" />
     </LinearLayout>
 
-    <ScrollView
+    <!-- RecyclerView -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/pinner_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="30dp"
         android:layout_marginHorizontal="30dp"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!-- First CardView -->
-            <androidx.cardview.widget.CardView android:id="@+id/card_one"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="?attr/theme_cardBackground">
-
-                <include layout="@layout/layout_card_clean" />
-
-            </androidx.cardview.widget.CardView>
-
-            <!-- Second CardView -->
-            <androidx.cardview.widget.CardView android:id="@+id/card_two"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="?attr/theme_cardBackground">
-
-                <include layout="@layout/layout_card_clean" />
-
-            </androidx.cardview.widget.CardView>
-
-            <!-- Third CardView -->
-            <androidx.cardview.widget.CardView android:id="@+id/card_three"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="?attr/theme_cardBackground">
-
-                <include layout="@layout/layout_card_clean" />
-
-            </androidx.cardview.widget.CardView>
-
-            <!-- Fourth CardView -->
-            <androidx.cardview.widget.CardView android:id="@+id/card_four"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="12dp"
-                android:backgroundTint="?attr/theme_cardBackground">
-
-                <include layout="@layout/layout_card_clean" />
-
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-    </ScrollView>
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
