--- a/app/src/main/res/layout/layout_card_clean.xml
+++ b/app/src/main/res/layout/layout_card_clean.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingVertical="20dp">
+    android:paddingVertical="20dp"
+    android:background="@drawable/theme_rounded_card"
+    android:layout_marginVertical="20dp"
+    >
 
     <TextView
         android:id="@+id/course_title"
