--- a/app/src/main/res/layout/activity_set_grade.xml
+++ b/app/src/main/res/layout/activity_set_grade.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetGradeActivity">
+    tools:context=".SetGradeActivity"
+    android:background="?attr/theme_backgroundColor"
+    >
 
     <!-- Header -->
     <LinearLayout
@@ -28,7 +30,8 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:textColor="?attr/theme_backgroundColor"
-            android:textSize="24sp"
+            android:textSize="18sp"
+            android:text="@string/str_home"
             android:fontFamily="@font/bai_jamjuree" />
 
         <ImageButton
@@ -59,7 +62,21 @@
 
             android:textSize="24sp"
             android:textColor="?attr/theme_text"
-            android:fontFamily="@font/bai_jamjuree" />
+            android:fontFamily="@font/bai_jamjuree"
+            android:textAlignment="center"
+
+            android:text="@string/app_name"/>
+
+        <TextView android:id="@+id/module_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:textSize="24sp"
+            android:textColor="?attr/theme_text"
+            android:fontFamily="@font/bai_jamjuree"
+            android:textAlignment="center"
+
+            android:text="@string/str_module_one"/>
 
         <EditText
             android:id="@+id/input_grade"
@@ -67,10 +84,12 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:background="@drawable/light_input"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textColor="?attr/theme_backgroundColor"
             android:fontFamily="@font/bai_jamjuree"
-            android:hint="@string/str_input" />
+            android:hint="@string/str_input"
+            android:inputType="numberDecimal"
+            />
     </LinearLayout>
 
     <LinearLayout
