--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,7 +6,8 @@
     <attr name="theme_backgroundColor" format="color" />
     <attr name="theme_text" format="color" />
     <attr name="theme_cardBackground" format="reference" />
-    <attr name="theme_input" format="color" />
+    <attr name="theme_cardColor" format="color" />
+    <attr name="theme_input" format="reference" />
 
     <!-- Icons -->
     <attr name="theme_icon_menu" format="reference" />
